<resources>
	<string name="hello">Waooooh</string>
    <string name="app_name">Waooooh</string>
    <string name="friend_list">Liste D\'amis</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="profile_me">My Profile Pic</string>
<string name="profile_other">Other profile pic</string>
    <string name="cancel">Annuler</string>
    <string name="messaging">Messaging</string>
    <string name="button_accepter">Veuillez Accepter Svp</string>
    <string name="verify_phone">Veuillez Entrez les 8 chiffres Svp</string>
       <string name="verify_code">Veuillez Entrez les 4 chiffres Svp</string>
  <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
	<string name="local_service_connected">local_service_connected</string>
	<string name="OK">OK</string>
	<string name="not_connected_to_service">Not connected to the service and 
	this is not supposed to happened so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>
	<string name="fill_both_username_and_password">Verifiez entrez votre numero et code Svp</string>
	<string name="make_sure_username_and_password_correct">Entrez un correcte numero et code Svp</string>
	<string name="user_offline">Cet Utilisateur est deconnecte</string>
	<string name="sign_up">Sign up</string>
	<string name="exit_application">Exit</string>
	<string name="password_again">Password(again):</string>
	<string name="email">E-mail</string>
	<string name="signup_fill_all_fields">Please fill all fields</string>
	<string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
	<string name="signup_failed">Sign up failed because of unknown reason</string>
	<string name="signup_username_crashed">Your username have been already taken, please try another username</string>
	<string name="signup_successfull">Your registration is completed successfully,\n you can login now </string>
	<string name="username_length_short">Entrez les 8 chiffres svp</string>
	<string name="password_length_short">Entrez le code recu par sms</string>
	<string name="add_new_friend">Ajoutez un ami(e)</string>
	<string name="no_friend">Vous avez point d\'amis,\n Ajoutez en clicquant sur le menu</string>
	<string name="add">Ajouter</string>
	<string name="request_sent">Votre demande a été envoyé</string>
	<string name="type_friend_username">Entrez le numero de votre ami</string>
	<string name="new_friend_request_exist">Alerte Waooooh</string>
	<string name="approve_selected_friends">Accepter ou Réfusez</string>
	<string name="not_connected_to_network">Il y a pas de connection disponible</string>
	<string name="message_cannot_be_sent">Votre message n\'a pas été envoyé</string>
	    <string name="touch_to_choose_picture">Touchez cette image pour selectionner votre photo </string>
	      <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Conference details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_conference_details">Conference Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread Conversations</string>
    <string name="sending">sending…</string>
    <string name="encrypted_message">Decrypting message. Please wait…</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="share_with">Share with</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">Conversations has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Conversations\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="send_rejected">rejected</string>
    <string name="receiving_image">Receiving image file (%1$d%%)</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="also_end_conversation">End this conversations afterwards</string>
    <string name="choose_presence">Choose presence to contact</string>
    <string name="send_plain_text_message">Send plain text message</string>
    <string name="send_otr_message">Send OTR encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="download_image">Download Image</string>
    <string name="image_offered_for_download"><i>Image file offered for download</i></string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Conversations utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="pseudo">Votre Pseudo</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Conversations is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Conversations is unable to encrypt your messages because your contacts are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
    <string name="encrypted_message_received"><i>Encrypted message received. Touch to view and decrypt.</i></string>
    <string name="encrypted_image_received"><i>Encrypted image received. Touch to view and decrypt.</i></string>
    <string name="image_file"><i>Image received. Touch to view</i></string>
    <string name="pref_general">General</string>
    <string name="pref_xmpp_resource">XMPP resource</string>
    <string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_notification_settings">Notification Settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summary">Notify when a new message arrives</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Also vibrate when a new message arrives</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summary">Play ringtone with notification</string>
    <string name="pref_conference_notifications">Conference notifications</string>
    <string name="pref_conference_notifications_summary">Always notify when a new conference message arrives instead of only when highlighted</string>
    <string name="pref_notification_grace_period">Notification grace period</string>
    <string name="pref_notification_grace_period_summary">Disable notifications for a short time after a carbon copy was received</string>
    <string name="pref_advanced_options">Advanced Options</string>
    <string name="pref_never_send_crash">Never send crash reports</string>
    <string name="pref_never_send_crash_summary">By sending in stack traces you are helping the ongoing development of Conversations</string>
    <string name="pref_confirm_messages">Confirm Messages</string>
    <string name="pref_confirm_messages_summary">Let your contact know when you have received and read a message</string>
    <string name="pref_ui_options">UI Options</string>
    <string name="openpgp_error">OpenKeychain reported an error</string>
    <string name="error_decrypting_file">I/O Error decrypting file</string>
    <string name="accept">Accept</string>
    <string name="error">An error has occurred</string>
    <string name="pref_grant_presence_updates">Grant presence updates</string>
    <string name="pref_grant_presence_updates_summary">Preemptively grant and ask for presence subscription for contacts you created</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="your_account">Your account</string>
    <string name="keys">Keys</string>
    <string name="finDinsta">Fin d \'installation</string>
    <string name="or_long_press_for_default">(ou maintenir pour reinitialiser  )</string>
</resources>