<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" 
    android:orientation="vertical">

     <LinearLayout
        android:id="@+id/account_image_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/message_border" >

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="194dp"
            android:layout_height="194dp"
            android:src="@drawable/user_logo" />

    </LinearLayout>

      <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_image_wrapper"
        android:layout_centerHorizontal="true"
        android:text="@string/touch_to_choose_picture"
       android:textColor="@color/darkbackground"  />

    <TextView
        android:id="@+id/secondary_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_centerHorizontal="true"
        
        android:textColor="@color/darkbackground" 
        android:text="@string/or_long_press_for_default"
         />

  <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
        
        <Button
            android:id="@+id/anu_button"
            android:background="#29E52F"
        
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/divider" />
        
        <!-- Button de fin d'installation -->

        <Button
            android:id="@+id/btn_finPro"
            android:background="#29E52F"
        
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           
            android:text="@string/finDinsta"
            android:textColor="@color/secondarytext" />
    </LinearLayout>

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:ems="10"
         >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hint"
        android:layout_below="@+id/secondary_hint"
        android:layout_marginLeft="20dp"
        android:text="TextView"
        android:textColor="@android:color/transparent" />

    <TextView
        android:id="@+id/textcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textuser"
        android:layout_alignBottom="@+id/textuser"
        android:layout_alignRight="@+id/hint"
        android:layout_marginRight="30dp"
        android:text="TextView" 
        android:textColor="@android:color/transparent"/>

    <TextView
        android:id="@+id/textmy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pseudo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/pseudo" />
-->

</RelativeLayout>